--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,53 @@
   pointer-events: none;
 }
 
+html, body, #root {
+  height: 100%;
+  margin: 0px;
+}
+
+h1,h2, h3, h4 ,h5, h6 {
+  color: #FBC02D;
+}
+div {
+  color:#FFF9C4;
+}
+
+body{
+  background-image: url('./assets/image/background.jpg');
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+}
+
+.nav-primary-bg-dw {
+  background-color:#000000;
+  width: 100%;
+}
+.full-height {
+  height: 100%;
+}
+
+.nav-item > a {
+  color:#FFEB3B;
+  font-size: x-large;
+  padding: 1rem;
+  height: 2vh;
+}
+
+
+a:hover {
+  color:#FFEB3B !important;
+  text-decoration: none !important;
+  text-align: center;
+}
+
+.primary-text-dw{
+  padding: 30px;
+  margin: 2em;
 }
 
 .App-header {
