--- a/src/App.css
+++ b/src/App.css
@@ -19,8 +19,139 @@ div {
   color:#FFF9C4;
 }
 
+
+* {
+  margin:0;
+  padding:0;
+}
+.line {
+  stroke: #000000;
+  stroke-width: 3;
+}  
+
+.main {
+  height:100vh;
+  width:100%;
+  padding:8rem 0 0 0;
+}
+.anime_box {
+  margin-left:26rem;
+  margin-top:-13rem;
+}
+.legacy_text {
+  color:#fff;
+  font-family: 'Gabriela', serif;
+  font-size:2.4rem;
+  animation:display 4s;
+}
+.shop_text {
+  color:#fff;
+  font-family: 'Gabriela', serif;
+  font-size:1.8rem;
+  animation:display 4s;
+}
+.illustration {
+  animation:display 4s;
+  width:25rem;
+}
+
+@keyframes display {
+  0%{opacity:0;}
+  100%{opacity:1;}
+}
+
+/* svg anime */
+.text-line {
+  stroke-dasharray: 500;
+  stroke-dashoffset: 500;
+  animation: dash 3s linear forwards, filling 5s ease-in forwards;
+  font-size: 80px;
+}
+
+.text-line text {
+  font-family: 'Gabriela', serif;
+  font-weight: normal;
+  font-style: normal;
+}
+
+@keyframes dash {
+  to {
+      stroke-dashoffset: 0;
+  }
+}
+
+@keyframes filling {
+  0%, 90% { fill: transparent; fill-opacity: 0; }
+  100% { fill: transparent; fill-opacity: 1; }
+}
+/* svg anime */
+
+/* media query */
+@media only screen and (max-width:1440px) {
+  .anime_box {
+      margin-left:22.5rem;
+      margin-top:-14rem;
+  }
+}
+@media only screen and (max-width:1240px) {
+  .anime_box {
+      margin-left:10rem;
+  }
+}
+@media only screen and (max-width:768px) {
+  .main {
+      padding:10rem 0 0 0;
+  }
+  .anime_box {
+      width:38rem;
+      margin-left:5rem;
+      margin-top:-13rem;
+  }
+  .legacy_text {
+      font-size:2rem;
+  }
+  .shop_text {
+      font-size:1.6rem;
+  }
+}
+@media only screen and (max-width:455px) {
+  .anime_box {
+      display:none;
+  }
+  .legacy_text {
+      font-size:1.8rem;
+  }
+  .shop_text {
+      font-size:1.4rem;
+  }
+  .illustration {
+      width:15rem;
+  }
+}
+@media only screen and (max-width:425px) {
+  
+}
+@media only screen and (max-width:375px) {
+  .shop_text {
+      font-size:1.2rem;
+  }
+}
+@media only screen and (max-width:320px) {
+  .legacy_text {
+      font-size:1.6rem;
+  }
+  .shop_text {
+      font-size:1.2rem;
+  }
+}
+/* media query */
+
+
 body{
-  background-image: url('./assets/image/background.jpg');
+  background-image: url('./assets/image/back.png');
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-attachment: fixed;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -30,15 +161,16 @@ body{
 }
 
 .nav-primary-bg-dw {
-  background-color:#000000;
-  width: 100%;
+  background-color: #FBC02D;
+  /* Add the blur effect */
+  
 }
 .full-height {
   height: 100%;
 }
 
 .nav-item > a {
-  color:#FFEB3B;
+  color: #010101;;
   font-size: x-large;
   padding: 1rem;
   height: 2vh;
@@ -46,7 +178,7 @@ body{
 
 
 a:hover {
-  color:#FFEB3B !important;
+  color:#010101 !important;
   text-decoration: none !important;
   text-align: center;
 }
