--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@ div {
 * {
   margin:0;
   padding:0;
+  z-index: 2;
 }
 .line {
   stroke: #000000;
@@ -148,10 +149,24 @@ div {
 
 
 body{
-  background-image: url('./assets/image/back.png');
+  background-image: url('./assets/image/backgroundNew.jpeg');
   background-repeat: no-repeat;
-  background-size: auto;
+  background-size: cover;
   background-attachment: fixed;
+  opacity: 1;
+  
+  
+}
+
+body:after {
+  position:absolute;
+  width:100%; 
+  height:100%;
+  top:0; left:0;
+  background:rgba(0,0,0,0.6);
+  opacity:1;
+  transition: all 0.5s;
+  -webkit-transition: all 0.5s;
 }
 
 @media (prefers-reduced-motion: no-preference) {
