--- a/public/css/default.css
+++ b/public/css/default.css
@@ -616,8 +616,8 @@ properly.
 @media only screen and (max-width: 767px) {
 
    .row {
-	   width: 460px;
-	   margin: 0 auto;
+	   width: 90%;
+	   margin: 0 auto !important;
       padding: 0;
 	}
    .column, .columns {
